--- a/templates/xccdf.erb
+++ b/templates/xccdf.erb
@@ -1,9 +1,16 @@
 #!/bin/bash
 
+RUN_TIME=$(date +%Y%m%d%H%M)
 
 oscap xccdf eval <% if @remediate %>--remediate<% end %> --profile <%= @profile %> \
-     --results <%= scope.lookupvar('openscap::scanner::basedir') %>/results/<%= @profile %>.$(date +%Y%m%d%H%M).html \
-     --report <%= scope.lookupvar('openscap::scanner::basedir') %>/reports/<%= @profile %>.$(date +%Y%m%d%H%M).html \
+     --results <%= scope.lookupvar('openscap::scanner::basedir') %>/results/<%= @profile %>.${RUN_TIME}.html \
+     --report <%= scope.lookupvar('openscap::scanner::basedir') %>/reports/<%= @profile %>.${RUN_TIME}.html \
      --tailoring-file <%= scope.lookupvar('openscap::scanner::basedir') %>/profiles/<%= @profile %>.xml \
      --cpe <%= scope.lookupvar('openscap::params::xccdf_cpe') %> \
      <%= scope.lookupvar('openscap::params::xccdf') %> > /dev/null 2>&1
+
+<% if @generate_remediation_script -%>
+# remediation script
+oscap xccdf generate fix --output <%= scope.lookupvar('openscap::scanner::basedir') %>/remediation_scripts/remediate-${RUN_TIME}.sh \
+                          <%= scope.lookupvar('openscap::scanner::basedir') %>/results/<%= @profile %>.${RUN_TIME}.html
+<% end -%>
